@@ -86,6 +86,8 @@ production.
 * (bug 29101) Special:FileDuplicateSearch shows silly message
 * (bug 29048) jQuery.tabIndex: firstTabIndex() should not output the same
   as lastTabIndex().
+* (bug 93) tilde signatures inside nowiki tags sometimes get expanded
+  (<includeonly><nowiki>~~~~</nowiki></includeonly>)
 
 === API changes in 1.19 ===
 * BREAKING CHANGE: action=watch now requires POST and token.
